// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkContentCards should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-content-cards"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;

exports[`BpkContentCards should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-content-cards"
    testid="123"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;

exports[`BpkContentCards should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-content-cards custom-classname"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;
